Generates page to show results, adds modal to home.ts

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -30,8 +30,10 @@
       </ion-range>
     </ion-item>
   </ion-list>
+
+  <button block ion-button (click)="calculate(user)">Calculate</button>
+  <button block ion-button (click)="showResults()">All Results</button>
   
-  <button block ion-button (click)="calculate()">Calculate</button>
 
   <ion-card *ngIf="person?.assessmentMessage">
       <ion-card-header>
