Adds person providers, apiBae in home spec file, moves some import from home to app component to make Http works

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -31,7 +31,7 @@
     </ion-item>
   </ion-list>
   
-  <button block ion-button (click)="calculate()">Calculate</button>
+  <button block ion-button (click)="calculate(user)">Calculate</button>
 
   <ion-card *ngIf="person?.assessmentMessage">
       <ion-card-header>
