--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -32,6 +32,7 @@
   </ion-list>
   
   <button block ion-button (click)="calculate(user)">Calculate</button>
+  <button block ion-button (click)="showResults()">All Results</button>
 
   <ion-card *ngIf="person?.assessmentMessage">
       <ion-card-header>
