Installs Doughnut Chart and one Radar Chart, adds logics, modifies content in results template

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -41,6 +41,10 @@
       <ion-card-content>
           Gender: {{person?.gender}}, Age: {{person?.age}} <br/> Result: {{person?.assessmentMessage}}
       </ion-card-content>
+
+      <button block ion-button (click)="saveResult()">Save results</button>
   </ion-card>
+
+  
   
 </ion-content>
